# Lingua-Mentor-v1

./: .editorconfig  .gitignore  .lintstagedrc.mjs  README.md  commitlint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-structure&naming-conversion.md
.github/: dependabot.yml
.github/workflows/: ci-ai-service.yml  ci-api-gateway.yml  ci-frontend.yml  ci-security.yml  ci-worker.yml  deploy.yml
.husky/: pre-commit
apps/ai-service/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/ai-service/alembic/: env.py
apps/ai-service/alembic/versions/: 2c94f9f4d576_lowercase_user_emails_and_enforce_case_.py  8f21c6b4de07_daily_session_idempotency_and_activity.py  b93033f9cc0b_initial_schema_all_phase_1_entities_per_.py  c3d9a71e5f28_lesson_chat_state.py  d1574d4bd57e_add_failed_to_appeal_status.py
apps/ai-service/app/: main.py
apps/ai-service/app/api/v1/: deps.py
apps/ai-service/app/api/v1/routers/: adaptive_learning.py  exam_simulation.py  mentor.py  persona.py  placement.py  readiness_prediction.py  voice_agent.py  writing_eval.py
apps/ai-service/app/calibration/: __init__.py  __main__.py  drift.py  harness.py  ingest.py  irr.py
apps/ai-service/app/config/exams/: delf_b1.yaml  delf_b2.yaml  ielts_academic.yaml  ielts_general.yaml  toefl_ibt.yaml
apps/ai-service/app/core/: config.py  errors.py  logging.py  security.py
apps/ai-service/app/db/: session.py
apps/ai-service/app/db/models/: __init__.py  ai_trace.py  analytics.py  base.py  calibration.py  enums.py  evaluation.py  exam.py  exam_session.py  identity.py  learning.py  user.py  writing_submission.py
apps/ai-service/app/db/repositories/: calibration_repository.py  daily_session_repository.py  lesson_repository.py  model_run_repository.py  skill_vector_repository.py  user_repository.py  writing_repository.py
apps/ai-service/app/engines/adaptive_learning/: __init__.py  daily_session.py  srs.py
apps/ai-service/app/engines/cefr_profile/: __init__.py  profile.py
apps/ai-service/app/engines/exam_simulation/: __init__.py
apps/ai-service/app/engines/mentor_chat/: __init__.py  chat.py
apps/ai-service/app/engines/persona/: __init__.py  persona.py
apps/ai-service/app/engines/readiness_prediction/: __init__.py
apps/ai-service/app/engines/voice_agent/: __init__.py
apps/ai-service/app/engines/writing_evaluation/: __init__.py  engine.py  exam_config.py  prompt_builder.py  schemas.py
apps/ai-service/app/providers/llm/: base.py  groq_provider.py
apps/ai-service/app/providers/stt/: base.py
apps/ai-service/app/providers/tts/: base.py  elevenlabs_provider.py  gtts_provider.py
apps/ai-service/tests/: conftest.py
apps/ai-service/tests/api/v1/routers/: test_placement.py  test_writing_eval.py
apps/ai-service/tests/calibration/: test_drift.py  test_harness.py  test_irr.py  test_persist_precheck.py  test_pipeline_integrity.py
apps/ai-service/tests/calibration/fixtures/: adversarial_seed.jsonl
apps/ai-service/tests/db/repositories/: test_calibration_repository.py  test_writing_repository.py
apps/ai-service/tests/engines/adaptive_learning/: test_daily_session.py  test_srs.py
apps/ai-service/tests/engines/cefr_profile/: test_profile.py
apps/ai-service/tests/engines/persona/: test_persona.py
apps/ai-service/tests/engines/writing_evaluation/: test_engine.py  test_exam_config.py  test_prompt_builder.py
apps/ai-service/tests/providers/: test_groq_stream.py
apps/api-gateway/: .env.example  Dockerfile  README.md  eslint.config.mjs  package.json  tsconfig.json
apps/api-gateway/src/: app.ts  server.ts
apps/api-gateway/test/: auth-login.test.ts  auth-refresh.test.ts  auth-register.test.ts  error-envelope.test.ts  helpers.ts  placement-submit.test.ts  security-headers.test.ts  session-daily.test.ts  session-lesson.test.ts  session-srs.test.ts  user-erase.test.ts  users-me.test.ts  voice-persona.test.ts  writing-appeal.test.ts  writing-calibration.test.ts  writing-exams.test.ts  writing-result.test.ts  writing-submit.test.ts
apps/frontend/: .env.example  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/: providers.tsx
apps/frontend/hooks/: use-cefr-profile.ts  use-exams.ts  use-me.ts  use-placement-task.ts  use-session.ts  use-writing-submission.ts
apps/frontend/lib/: api-client.ts  auth.ts  cefr.test.ts  cefr.ts  utils.test.ts  utils.ts  websocket-client.ts
apps/frontend/store/: auth-store.ts
apps/worker/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/worker/app/: main.py  settings.py  worker_settings.py
apps/worker/app/clients/: ai_service.py
apps/worker/app/db/: appeal_queries.py  daily_session_queries.py  writing_queries.py
apps/worker/app/tasks/: appeal_eval_task.py  calibration_recompute_task.py  daily_session_generation_task.py  srs_batch_generation_task.py  writing_eval_task.py
apps/worker/tests/: conftest.py
apps/worker/tests/clients/: test_ai_service.py
apps/worker/tests/db/: test_writing_queries.py
apps/worker/tests/tasks/: test_appeal_eval_task.py  test_writing_eval_task.py
docs/: README.md
docs/architecture/: project-structure-and-conventions.md
docs/architecture/adr/: 0001-deployment-architecture-patch-v1.md  0002-writing-evaluation-scoring-models.md  0003-toefl-ibt-2026-redesign.md  0004-readiness-prediction-exam-dependent-output.md  0005-accent-relative-scoring-engineering-choice.md  0006-phase-0-calibration-gate-hardening.md  (+4 more)
docs/prd/: README.md
docs/research/: README.md  exam-ground-truth-reference.md  exam-reality-traceability.md
docs/runbooks/: incident-response.md  restore-postgres.md
infra/: docker-compose.prod.yml  docker-compose.yml
infra/coolify/: README.md
scripts/: backup-verify.sh  generate-jwt-keys.sh  seed-db.sh  setup-dev.sh
(+71 files in other folders)
