[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "LinguaMentor AI orchestration service — the five engines"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115,<0.140"
uvicorn = ">=0.34,<0.52"
asyncpg = ">=0.29,<0.32"       # runtime queries; SQLAlchemy below never serves a request
sqlalchemy = "^2.0"     # models exist only for Alembic autogenerate — see app/db/models/
alembic = "^1.13"
pydantic = "^2.9"
pydantic-settings = "^2.6"
httpx = "^0.28"
pyyaml = "^6.0"         # exam definitions in app/config/exams/ are YAML, not code
greenlet = "^3.1"       # required by SQLAlchemy's async engine

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
ruff = ">=0.8,<0.16"
mypy = "^1.13"
types-pyyaml = "^6.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
# Generated revision scripts, committed as-is and never hand-styled.
extend-exclude = ["alembic/versions"]
# Named paths from .husky/pre-commit escape the exclude above without this.
force-exclude = true

[tool.ruff.lint]
# The bug-catchers plus import hygiene; revisit bugbear once the engines settle.
select = ["E", "F", "I", "UP"]
ignore = [
    # FastAPI routers and SQLAlchemy models both register by import-time side effect.
    "E402",
]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]
# Fixture shadowing and wide tabular literals are what pytest style already looks like.
"tests/**/*.py" = ["F401", "F811", "E501"]
# Reflowing these f-strings edits the grader's prompt — a scoring change, not a style fix.
"app/engines/writing_evaluation/prompt_builder.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
exclude = ["alembic/"]
